<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context="com.tally.yellowbrickme.app.HomeFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.cengalabs.flatui.views.FlatButton
                android:id="@+id/settings"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:text="@string/action_settings"
                flatui:fontWeight="light"
                flatui:isFullFlat="true"
                flatui:textAppearance="light"
                flatui:theme="Grass" />

            <com.cengalabs.flatui.views.FlatButton
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:text="@string/history"
                flatui:fontWeight="light"
                flatui:isFullFlat="true"
                flatui:textAppearance="light"
                flatui:theme="Grass" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">

            <com.cengalabs.flatui.views.FlatTextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tip_of_the_day"
                android:textSize="26sp"
                flatui:fontFamily="Roboto"
                flatui:textColor="main"
                flatui:theme="Grass" />

            <com.cengalabs.flatui.views.FlatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Drink water and exercise lots! Keep motivated and do not give up."
                android:textSize="20sp"
                flatui:textColor="main"
                flatui:theme="Grass" />
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp">

        <Chronometer
            android:id="@+id/chrono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <com.cengalabs.flatui.views.FlatTextView
            android:id="@+id/progressTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:textSize="10sp"
            flatui:textColor="main"
            flatui:theme="Deep" />

        <com.cengalabs.flatui.views.FlatTextView
            android:id="@+id/elapsedTime"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressTitle"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            flatui:textColor="main"
            flatui:theme="Deep" />

        <com.cengalabs.flatui.views.FlatButton
            android:id="@+id/break_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/elapsedTime"
            android:layout_margin="10dp"
            android:text="@string/need_break"
            android:textSize="10sp" />

        <com.cengalabs.flatui.views.FlatButton
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/elapsedTime"
            android:layout_margin="10dp"
            android:text="@string/log_it"
            android:textSize="10sp"
            flatui:fontWeight="light"
            flatui:textAppearance="light" />

        <com.cengalabs.flatui.views.FlatButton
            android:id="@+id/study"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:text="@string/study"
            android:textSize="26sp"
            flatui:backgroundColor="darker"
            flatui:cornerRadius="200dip"
            flatui:fontWeight="light"
            flatui:textAppearance="light"
            flatui:theme="Grass" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialogue_gradient">
    <!--<ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/robotdialogue" />-->
<!--        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_screen_welcome"
            android:layout_gravity="bottom"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_margin="10dp"
            android:textColor="@color/white"/>-->
    </FrameLayout>

</LinearLayout>